tests/ui/tuple_struct.stderr
error: tuple structs are not supported.
 --> $DIR/tuple_struct.rs:4:1
  |
4 | struct TupleStruct<'a, T>(u64, usize, &'a T);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
